# eventql-kafka

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  schema.avro
resources/: grammar.pest
resources/schema/: FirstNameChanged.json  UserChanged.json
src/: ast.rs  kafka.rs  main.rs
src/lang/: ast.rs  main.rs
src/producer/: avro.rs  cli.rs  kafka.rs  main.rs
src/server/: ast.rs  error.rs  kafka.rs  main.rs  parser.rs  virtual_table.rs
