[package]
name = "eventql-kafka"
version = "0.1.0"
authors = ["Niklas Schöllhorn <schoellhorn.niklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parser"
path = "src/lang/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
