[package]
name = "eventql-kafka"
version = "0.1.0"
authors = ["Niklas Schöllhorn <schoellhorn.niklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
schema_registry_converter = "1.1.0"
avro-rs = "0.9.1"
kafka = "0.8.0"
