[package]
name = "eventql-kafka"
version = "0.1.0"
authors = ["Niklas Schöllhorn <schoellhorn.niklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eventql-server"
path = "src/server/main.rs"

[[bin]]
name = "eventql-producer"
path = "src/producer/main.rs"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
avro-rs = "0.9.1"
kafka = "0.8.0"
clap = "2.33.1"
serde_json = "1.0.53"
failure = "0.1.8"
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "tcp", "macros"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
linked-hash-map = "0.5.3"
